fix unit type alignment

--- a/web-frontend/src/app/admin/master/tank/form-dialog/form-dialog.component.scss
+++ b/web-frontend/src/app/admin/master/tank/form-dialog/form-dialog.component.scss
@@ -1,7 +1,6 @@
-
-
 .table-container {
-  max-height: 400px; /* Adjust height as needed */
+  max-height: 400px;
+  /* Adjust height as needed */
   overflow: auto;
 }
 
@@ -10,70 +9,74 @@ table.mat-table {
   border-collapse: collapse;
 }
 
-.mat-cell, .mat-header-cell {
+.mat-cell,
+.mat-header-cell {
   padding: 8px;
 }
+
 .auto-height {
   height: auto;
-  max-height: none; /* Ensures there's no max-height limiting the container */
-  overflow: auto;   /* Ensures scrollbars appear if content exceeds container size */
+  max-height: none;
+  /* Ensures there's no max-height limiting the container */
+  overflow: auto;
+  /* Ensures scrollbars appear if content exceeds container size */
 }
-   mat-tab-group {
-     width:50vh;
-     //height: 70vh;
-    // transition: transform 0.2s;
-   }
-  
+
+mat-tab-group {
+  width: 50vh;
+  //height: 70vh;
+  // transition: transform 0.2s;
+}
+
 td div img:hover {
-    transform: scale(1.1);
-    cursor: pointer;
-  }
+  transform: scale(1.1);
+  cursor: pointer;
+}
 
 
-  
-  td div {
-    //display: flex;
-    flex-wrap: nowrap; /* Prevent wrapping */
-    justify-content: center;
-    align-items: center;
-    height: 95%;
-    //overflow: hidden;
-  }
-  
-  td div img {
-    max-width: 50vh;
-    height: 10vh;
-   
-    transition: transform 0.2s;
-    padding-right: 10px;
-  }
 
-  .mat-tab-group {
-    margin-bottom: 48px;
-  }
-  .mat-tab-labels{ 
-    flex-wrap: wrap;
-   }
-   .card {
-    padding: 20px;
-    border-radius: 8px;
-    background-color: #fff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Shadow effect */
-    transition: box-shadow 0.3s ease; /* Smooth transition for hover effect */
-  }
-  
-  /* Optional: Add a hover effect */
-  .card:hover {
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Slightly deeper shadow on hover */
-  }
+td div {
+  //display: flex;
+  flex-wrap: nowrap;
+  /* Prevent wrapping */
+  justify-content: center;
+  align-items: center;
+  height: 95%;
+  //overflow: hidden;
+}
 
-  .scaled-toggle {
-    transform: scale(1.2);  /* Adjust scale as needed */
-    transform-origin: left center;  /* Optional: align origin */
-    display: inline-block;
-    margin: 16px 0;
-  }
+td div img {
+  max-width: 50vh;
+  height: 10vh;
 
-  ::ng-deep .mat-mdc-dialog-content {
-    max-width: none;
-  }
+  transition: transform 0.2s;
+  padding-right: 10px;
+}
+
+.mat-tab-group {
+  margin-bottom: 48px;
+}
+
+.mat-tab-labels {
+  flex-wrap: wrap;
+}
+
+.card {
+  padding: 20px;
+  border-radius: 8px;
+  background-color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  /* Shadow effect */
+  transition: box-shadow 0.3s ease;
+  /* Smooth transition for hover effect */
+}
+
+/* Optional: Add a hover effect */
+.card:hover {
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  /* Slightly deeper shadow on hover */
+}
+
+.scaled-toggle {
+  margin: 5px 0;
+}
